# shotgun

./: .gitignore  COPYING-ICONS  Makefile.am  Shotgun.h  TODO  build.sh  clean.sh  configure.ac  iq.c  login.c  messaging.c  presence.c  sasl.c  sasl.h  shotgun.c  shotgun_private.h  shotgun_utils.c  xml.cpp  xml.h
data/: Makefile.am
data/desktop/: Makefile.am
data/theme/: Makefile.am  default.edc
src/include/: Shotgun.h
src/lib/: Makefile.am  iq.c  login.c  presence.c  shotgun.c  shotgun_private.h  shotgun_utils.c  xml.cpp  xml.h
ui/: chat.c  chat_image.c  contact.c  contact_list.c  events.c  main.c  ui.h
